# LinaEngine

./: .gitignore  Client.cpp  PLAN.md  README.md  Types.h  lhf.h
ECS/: components.cpp
ECS/include/: ECSManager.h  Entity.h  component.h  components.h
Events/: ApplicationEvent.h  Event.h  EventListener.h  Events.h  KeyCodes.h  KeyEvent.h  MouseEvent.h  RenderEvent.h  WindowEvent.h
GUI/: MainScreen.cpp  Spawner.cpp
GUI/include/: MainScreen.h  Screen.h  Spawner.h
Graphics/: CallBackFunctions.h  Icosphere.h  IndexBuffer.h  Renderable.cpp  Renderable.h  Renderer.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  glad.h  shaderString.h  shaders.h  today  utilities.h  window.h
Graphics/shaders/: basic.shader  basic2.shader
Graphics/src/: CallbackFunctions.cpp  Icosphere.cpp  IndexBuffer.cpp  Renderer.cpp  (+8 more)
Layers/: GUI.cpp  Render.cpp
Managers/: Input.cpp  LayerManager.cpp
Math/: AABB.h  AABB.hpp  Frustum.h  Line.h  Line.hpp  Matrix.hpp  Matrix3D.h  Matrix4D.h  Matrix4D.hpp  Plane.h  Plane.hpp  Point3D.h  Point3D.hpp  Quatrenion.h  Quatrenion.hpp  Ray.h  Ray.hpp  Sphere.h  Sphere.hpp  Transform4D.h  Transform4D.hpp  Utilities.h  Vector3D.hpp  Vector4D.hpp  math.h  segment.h  segment.hpp
Memory/: Allocator.cpp  FreeList.cpp  Memory.cpp  build.sh  main  main.cpp  output.out
Scene/: Components.h
core/: Layer.h  LayerStack.h  Timer.h
data/: planets.csv
main/: CMakeCache.txt  CMakeLists.txt  LinaGraphics.h  LinaMath.h  Makefile  cmake_install.cmake  main  main.cpp
plan/: latest.md
quickTest/: build.sh  main  main.cpp
utils/: defaults.h
(+170 files in other folders)
